2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/solvedio.spad.pamphlet: Do not use 'free'
	as identifier.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/op.spad.pamphlet,
	src/algebra/expr.spad.pamphlet,
	src/algebra/algfunc.spad.pamphlet: Add 'rootSum'.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/efstruc.spad.pamphlet: findLinearRelation2():
	Avoid division by zero.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/genser.spad.pamphlet: Really remove leading
	zeros in 'nthRootIfCan'.

2012-10-07  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intrf.spad.pamphlet: Add ParallelIntegrationTools.
	src/algebra/Makefile.in: Adjust.

2012-10-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/limitps.spad.pamphlet: Use 'mrv_limit' also
	for finite one-sided limits.

2012-10-06  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/mfinfact.spad.pamphlet,
	src/algebra/multfact.spad.pamphlet
	src/algebra/polycat.spad.pamphlet
	src/algebra/npcoef.spad.pamphlet: Minor cleanups.

2012-10-05  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/geneez.spad.pamphlet: Minor cleanup.

2012-10-02  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/pfbr.spad.pamphlet: Fix PFBR.

2012-09-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algbera/*.spad.pamphlet: Cleanup of 'pretend'.

2012-09-29  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/intalg.spad.pamphlet: Another case
	of unintegrable integrals.

2012-09-23  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/expr.spad.pamphlet: More efficient
	'alg_ker_set'.

2012-09-22  Waldek Hebisch  <hebisch@math.uni.wroc.pl>

	* src/algebra/*: Normalize whitespace.

2012-09-14  Ralf Hemmecke  <ralf@hemmecke.de>

	* src/algebra/Makefile.in, src/algebra/xhash.spad.pamphlet,
	src/lisp/primitives.lisp: add XHashTable

2012-09-14  Ralf Hemmecke  <ralf@hemmecke.de>
