@@ -1,5 +1,11 @@
 2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
 
+	* src/interp/c-doc.boot, src/interp/c-util.boot,
+	src/interp/msgdb.boot, src/interp/vmlisp.lisp,
+	src/interp/spaderror.lisp: Minor cleanups.
+
+2012-10-13  Waldek Hebisch  <hebisch@math.uni.wroc.pl>
+
 	* src/algebra/solvedio.spad.pamphlet: Do not use 'free'
 	as identifier.
 
